--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="hour"></div>
+      <div class="row"></div>
+      <div class="time-block"></div>
+      <div class="saveBtn"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script> src="script.js"</script>
   </body>
 </html>
