--- a/index.html
+++ b/index.html
@@ -35,55 +35,55 @@
     <div class="container">
               <!-- Timeblocks go here -->
 
-      <div class="row" id="9am">
+      <div class="row" id="9">
         <div class ="col-2 hour time-block">9:00 am</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="10am">
+      <div class="row" id="10">
         <div class ="col-2 hour time-block">10:00 am</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
       
-      <div class="row" id="11am">
+      <div class="row" id="11">
         <div class ="col-2 hour time-block">11:00 am</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="12pm">
+      <div class="row" id="12">
         <div class ="col-2 hour time-block">12:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="1pm">
+      <div class="row" id="1">
         <div class ="col-2 hour time-block">1:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="2pm">
+      <div class="row" id="2">
         <div class ="col-2 hour time-block">2:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="3pm">
+      <div class="row" id="3">
         <div class ="col-2 hour time-block">3:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="4pm">
+      <div class="row" id="4">
         <div class ="col-2 hour time-block">4:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
       </div>
 
-      <div class="row" id="5pm">
+      <div class="row" id="5">
         <div class ="col-2 hour time-block">5:00 pm</div>
         <input type="text" class="col-8">
         <button class="col-2 saveBtn"><i class="fa fa-save"></i></button>
